--- a/predict.ipynb
+++ b/predict.ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "088fd9a4",
-   "metadata": {},
-   "source": [
-    "Load model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "74ab6be5",
    "metadata": {},
    "outputs": [],
@@ -42,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "f7832e3c",
    "metadata": {},
    "outputs": [
@@ -89,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "8468d591",
    "metadata": {},
    "outputs": [
@@ -176,7 +168,7 @@
        "4  once you ve read this list you re going to wan...  left-news  2017-11-17  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "03ae8e14",
    "metadata": {},
    "outputs": [
@@ -309,7 +301,7 @@
        "4  read list going want share everyone know russi...  left-news  2017-11-17  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "5ab35c36",
    "metadata": {},
    "outputs": [
@@ -421,7 +413,7 @@
        "4  read list go want share everyon know russian u...  left-news  2017-11-17  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "d326290a",
    "metadata": {},
    "outputs": [
@@ -501,7 +493,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>factbox pot nation canada plans for legal mari...</td>\n",
-       "      <td>reuters recreational marijuana is on track to ...</td>\n",
+       "      <td>reuters recreational marijuana is on track to...</td>\n",
        "      <td>worldnews</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -531,12 +523,12 @@
        "                                                text    subject  \n",
        "0  united nations reuters an international invest...  worldnews  \n",
        "1  cairo reuters lebanon prime minister saad alha...  worldnews  \n",
-       "2  reuters recreational marijuana is on track to ...  worldnews  \n",
+       "2   reuters recreational marijuana is on track to...  worldnews  \n",
        "3  beirut reuters lebanon could face economic san...  worldnews  \n",
        "4  united nations reuters russia vetoed on friday...  worldnews  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "id": "9948393c",
    "metadata": {},
    "outputs": [
@@ -575,7 +567,7 @@
        "(4489, 152612)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,15 +604,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "id": "7d0a0df5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predictions: [1 0 1 ... 0 0 0]\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'modelLR.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# load LR model\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m clf_lr \u001b[38;5;241m=\u001b[39m joblib\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodelLR.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# make predictions\u001b[39;00m\n\u001b[1;32m      5\u001b[0m y_pred_lr \u001b[38;5;241m=\u001b[39m clf_lr\u001b[38;5;241m.\u001b[39mpredict(X_tr_all)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.13/site-packages/joblib/numpy_pickle.py:650\u001b[0m, in \u001b[0;36mload\u001b[0;34m(filename, mmap_mode)\u001b[0m\n\u001b[1;32m    648\u001b[0m         obj \u001b[38;5;241m=\u001b[39m _unpickle(fobj)\n\u001b[1;32m    649\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 650\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m    651\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m _read_fileobject(f, filename, mmap_mode) \u001b[38;5;28;01mas\u001b[39;00m fobj:\n\u001b[1;32m    652\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(fobj, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m    653\u001b[0m                 \u001b[38;5;66;03m# if the returned file object is a string, this means we\u001b[39;00m\n\u001b[1;32m    654\u001b[0m                 \u001b[38;5;66;03m# try to load a pickle file generated with an version of\u001b[39;00m\n\u001b[1;32m    655\u001b[0m                 \u001b[38;5;66;03m# Joblib so we load it with joblib compatibility function.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'modelLR.pkl'"
      ]
     }
    ],
@@ -664,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "2ff3ddf1",
    "metadata": {},
    "outputs": [
@@ -689,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "b1c27e1d",
    "metadata": {},
    "outputs": [],
@@ -705,14 +702,6 @@
     "# Save to new file\n",
     "data.to_csv(\"predictionsRF.csv\", index=False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0d5ef1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
